tests/error/py_errors/sig_mismatch.err
Error: Signature mismatch (at <In [69]>:15:0)
   | 
13 | 
14 | @guppy.pytket(circ, module)
15 | def guppy_circ(q: qubit) -> None: ...
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function signature guppy_circ doesn't match provided pytket
   |                                       circuit

Guppy compilation failed due to 1 previous error